--- a/css/detail.css
+++ b/css/detail.css
@@ -1,3 +1,7 @@
+body{
+    height: 13.33rem;
+    position: absolute;
+}
 /* header start */
 header{
     width: 7.5rem;
@@ -144,4 +148,138 @@ header  .icon-fanhui:before{
     background-size: .55rem .55rem;
     margin-right: .13rem;
 }
+.body .process{
+    height: .15rem;
+}
+.body .process .pro_all{
+    width: 6.82rem;
+    height: .15rem;
+    background-color: #f0f0f0;
+    margin: .75rem .34rem 0;
+    border-radius: .5rem;
+}
+.body .pro_wrap{
+    width: 37%;
+    height: .15rem;
+    background-color: #fb0502;
+    border-radius: .5rem;
+}
+/* .body .process .percentage_box{
+    position: relative;
+} */
+.body .process .percentage{
+    width: .6rem;
+    height: .32rem;
+    background-color: #fb0502;
+    font-size: .2rem;
+    color: white;
+    text-align: center;
+    line-height: .32rem;
+    border-radius: .05rem;
+    position: relative;
+    left: 34%;
+    top: -0.65rem;
+    z-index:-1;
+}
+.body .process .percentage:after{
+    content: "";/* 在这里添加了一个句号"."，并且把它的display设置成block；高度设为0；clear设为both；visibility设为隐藏，这样就达到了撑开容器的目的 */
+    display: block;
+    position: absolute;
+    left: 30%;
+    top: .35rem;
+    width: 0px;
+    height: 0rem;
+    border: .1rem solid transparent;
+    border-top: 0.1rem solid #fb0502;
+    z-index:-1;
+}
+.body .bottom{
+    font-size: .22rem;
+    color: #808080;
+    display: flex;
+    margin: .25rem .34rem 0;
+}
+.body .bottom .text1{
+    height: .22rem;
+    width: 50%;
+}
+.body .bottom .text2{
+    height: .22rem;
+    width: 50%;
+    text-align: right;
+}
+.body .bottom .text{
+    color: #fb0502;
+}
+.body .last{
+    font-size: .22rem;
+    color: #808080;
+    text-align: center;
+    position: relative;
+    top: 3rem;
+}
 /* body end */
+
+
+/* footer start */
+.footer{
+    height: 1.05rem;
+    width: 100%;
+    display: flex;
+    background-color: #f0f0f0;
+    border-top: .02rem solid #e0e0e0;
+    position: fixed;
+    bottom: 0rem;
+    align-items: center;
+}
+.footer .text1{
+    font-size: .36rem;
+    text-decoration: underline;  
+    margin: auto .45rem auto .30rem;
+}
+.footer .text1 .shouyigusuan{
+    color: #f90;
+}
+.footer .text2{
+    width: 5.17rem;
+    height: .82rem;
+    background-color: #fa3432;
+    font-size: .36rem;
+    color: white;
+    border-radius: .1rem;
+    text-align: center;
+    line-height: .72rem;
+}
+/* footer end */
+
+
+/* mask start */
+.mask{
+    position: absolute;
+    top: .92rem;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    display: none;
+}
+.mask .mask_box{
+    height: 1.2rem;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+.mask .mask_box a{
+    color: #f00;
+    font-size: .28rem;
+    width: 25%;
+    border-right: 1px solid #ddd;
+    text-align: center;
+}
+.mask .mask_box a .iconfont{
+    display: block;
+    font-size: .4rem;
+    margin: 0 auto;
+}
+
+/* mask end  */
